local/etc/network.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: postgres-network
  namespace: postgres
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              postgres-network: "true"
  podSelector:
    matchLabels:
      postgres-network: "true"
